# mblabelsite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: cli-reference.md  input-files.md  templates.md
input/: music.css  release.css
input/artist_ordering/: 1dac6f53-b6ee-4a1d-9a5e-8f50304dba36.order
input/artist_rewrites/: 067ab122-f895-49c4-9512-34b39e582161.rewrite  085604e5-4262-48cd-99f2-f833830ed4ee.rewrite  0d343114-ea7a-48c2-b1ce-a8e99d96edcf.rewrite  0edbf53d-9bfe-4aa7-b97c-56d3aa2980e2.rewrite  118ce956-099a-4612-8a4f-a71f9697fdf4.rewrite  12a29e4d-5671-4686-bf9a-41127ea41daf.rewrite  16946177-e629-48c5-a625-81b6f6cbf614.rewrite  16c5b458-ed79-48de-87a2-995f962f7fce.rewrite  1a040343-0b93-41a2-8c13-9b1438aea583.rewrite  1e486c17-e42f-4811-a3d7-472c93a57654.rewrite  26bd9b6b-735c-4072-99e9-50fbe3d30165.rewrite  2780ded3-bf1f-485f-bfb5-53058c263ae9.rewrite  27bb7dfc-50ee-460b-ad99-b6b8e60064e9.rewrite  2c5bfe07-460e-4259-9a62-28df0f4cc777.rewrite  2df1bd05-1e66-4fe1-881e-0f92db7707d8.rewrite  (+68 more)
src/mblabelsite/: __init__.py  (+11 more)
templates/: artist  artist_masters  artist_releases  artist_remixes  template  template_artists  template_bandcamp  template_cover_art_designer  template_mastering  template_notes  template_physical  template_purchase  template_release  template_remixers  template_soundcloud  template_tracks
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_fetcher.py  test_generator.py  test_mb_client.py  test_migrate.py  test_models.py  test_slug.py  test_templates.py  test_validation.py
(+316 files in other folders)
